--- a/omod/src/main/webapp/resources/htmlforms/hts/htsRegister.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsRegister.html
@@ -16,7 +16,6 @@
 
     <script type="text/javascript" src="../moduleResources/kenyaemr/scripts/moment.js"></script>
     <script type="text/javascript">
-
         var populationTypeSelected = function () {
             var val = jq(this).val();
             if (val == 1066 ){
@@ -192,7 +191,6 @@
             jq('#has-disability input').change(hasDisabilitySelected);
             jq('#disability select').prop("disabled", true);
             //in care
-            jq('#ccc-no input').attr('placeholder', 'If linked to care..');
             jq('#in-care input').change(inCareSelected);
             //couple testing
             jq("#couple-testing input").change(coupleTestedAction);
@@ -203,7 +201,21 @@
             //jq("#hiv-final-result select").change(finalTestSelected);
             //test kit expiry
             jq("#expiry-date input").change(expiryDateSelected);
+            //jq('#ccc-no :input').prop('readonly', true);
+    });
 
+        //Before Submit
+        beforeSubmit.push(function() {
+            var PATIENT_UPN = "<lookup expression="patient.getPatientIdentifier(3)"/>";
+            var upn = jq('#hiv-id input').val();
+
+                if(upn != null &amp;&amp; upn != "") {
+                    if ((/^[0-9]{10}$/.test(upn) === false) &amp;&amp; (/^[0-9]{11}$/.test(upn) === false)) {
+                        alert("Invalid Unique Patient Number(UPN) Format! Should be mfl-clinic number, each 5 digits (accepts 11 digits for existing UPN)");
+                        return false;
+                    }
+                }
+            return true;
         });
 
     </script>
@@ -386,11 +398,10 @@
                               answerLabels="Positive,Negative,Inconclusive"/>
                     </td>
                     <td>&#160;&#160;&#160;&#160;Results given to client?&#160;&#160;&#160;&#160;
-                        <obs class="result-given" conceptId="164401AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                        <obs class="result-given" conceptId="164848AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                              answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                              style="dropdown" answerLabels="YES,NO"/>
                     </td>
-
                 </tr>
             </table>
             <br />
@@ -415,7 +426,7 @@
                     </td>
                     <td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; Unique Patient Number (UPN):
                     <td> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
-                        <span id="ccc-no"><patient id="upn" field="identifier" identifierTypeId="05ee9cf4-7242-4a17-b4d4-00f707265c8a" required="false"/></span>
+                        <span id="hiv-id"><patient id="upn" field="identifier" identifierTypeId="05ee9cf4-7242-4a17-b4d4-00f707265c8a" required="false" /></span>
                     </td>
                     </td>
                 </tr>
@@ -437,7 +448,7 @@
             <table id="tbl-remarks">
                 <tr>
                     <td> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Remarks: &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
-                        <obs class="remarks" conceptId="163761AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  rows="1" cols="80"
+                        <obs class="remarks" conceptId="163761AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  rows="5" cols="80"
                         />
                     </td>
                 </tr>
