key population control type needs adjustments

--- a/omod/src/main/webapp/resources/htmlforms/hts/htsRegister.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsRegister.html
@@ -257,7 +257,7 @@
             </tr>
         </table>
     </div>
-
+git
     <div class="ke-form-content">
         <!-- Population Type  -->
         <fieldset>
@@ -266,7 +266,7 @@
                 Client population type:
                 &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
                 <obs conceptId="160581AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                     answerLabel="Key Population, General Population" style="checkbox" /><br/>
+                     answerLabel="Key Population, General Population" style="radio" /><br/>
             </div>
             <table id="key-population">
                 <tr>
