--- a/omod/src/main/webapp/resources/htmlforms/hts/referralAndLinkage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/referralAndLinkage.html
@@ -49,26 +49,12 @@
     </div>
 
     <div class="ke-form-content">
-        <fieldset>
-            <legend>Referral</legend>
-            <table id="transit-patient" style="display: inline-block">
-                <tr>
-                    <td>Facility referred to: </td>
-                    <td> &#160;&#160;&#160;&#160;&#160;&#160;
-                        <obs conceptId="161562AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
 
-                    </td>
-                    <td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; Preferred date of enrollment:</td>
-                    <td>&#160;&#160;&#160;&#160;
-                        <obs conceptId="160555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="prefer-enroll-date" allowFutureDates="true" /></td>
-                </tr>
-            </table>
-        </fieldset>
         <fieldset>
             <legend>Patient Tracing</legend>
 
             <table id="tracing-patient" style="display: inline-block">
-                <obsgroup groupingConceptId="164849AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
+
                     <tr>
                         <td>Contact type:
                             <obs id="contact-type" conceptId="164181AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
@@ -81,34 +67,26 @@
                                  answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                  style="dropdown" answerLabels="Successful,Not successful"/>
                         </td>
-                        <td>&#160;&#160;&#160;&#160;Date
-                            <obs id="contact-date" conceptId="162502AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true"
-                            />
-                        </td>
                     </tr>
-                </obsgroup>
+
             </table>
         </fieldset>
         <fieldset>
             <legend>Linkage to care</legend>
             <table id="tbl-care-status">
                 <tr>
-                    <td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;In care: &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
-                        <obs id="in-care" conceptId="159811AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                             answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                             style="radio" answerLabels="YES,NO,N/A"/>
-                    </td>
                     <td>&#160;&#160;&#160;&#160;&#160;&#160;Facility linked to: </td>
                     <td> &#160;&#160;&#160;&#160;&#160;&#160;
-                        <obsgroup groupingConceptId="162724AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
-                            <obs conceptId="161550AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-                        </obsgroup>
+
+                            <obs conceptId="162724AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
 
                     </td>
                     <td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; Unique Patient Number (UPN):
                     <td> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
-                        <span id="hiv-id"><patient id="upn" field="identifier" identifierTypeId="05ee9cf4-7242-4a17-b4d4-00f707265c8a" required="false" /></span>
-                    </td>
+                        <!--<span id="hiv-id"><patient id="upn" field="identifier" identifierTypeId="05ee9cf4-7242-4a17-b4d4-00f707265c8a" required="false" /></span>-->
+                    <obs class="upn" conceptId="162053"
+                    />
+                </td>
                     </td>
                 </tr>
                 <td></td>
@@ -117,10 +95,6 @@
                 <tr>
                     <td><strong>Health worker handed to : </strong>&#160;&#160;&#160;&#160;&#160;&#160;
                         <obs class="hcw-handedto" conceptId="1473AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                        />
-                    </td>
-                    <td><strong>Cadre : </strong>&#160;&#160;&#160;&#160;&#160;&#160;
-                        <obs class="hcw-cadre" conceptId="1473AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                         />
                     </td>
                 </tr>
